--- a/html/logout.html
+++ b/html/logout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Private </title>
+        <title> Logout </title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
